# FontLoaderSub

./: CMakeLists.txt
.github/workflows/: build.yml
FontLoaderSub/: font_load_mac.c  font_loader.c  font_loader.h  font_set.c  main_mac.c  path.c  path.h  path_posix.c  platform.h  ttf_parser.h  util.h  util_posix.c
FontLoaderSub/mac_gui/: AppDelegate.m  FLBridge.h  FLBridge.m  FLManager.h  FLManager.m  Info.plist  main_mac_gui.m
scripts/: build_dmg.sh
